--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
   
-    "server": "node server.js"
+    "server": "node src/server.js"
   },
   "keywords": [],
   "author": "",
